2006-06-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>
	* Merge of HEAD --> generics-branch for 2006/06/16
	to 2006/06/27.